plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.offerverdict'
version = '0.0.1-SNAPSHOT'
description = 'OfferVerdict'

java {
    toolchain {
        // Java 17로 설정하신 것 아주 좋습니다. 안정적입니다.
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // DevTools for automatic reload of templates and static resources
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // [중요] 제가 드린 코드(@Data, @Builder)를 쓰기 위해 꼭 필요한 Lombok 추가
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.microsoft.playwright:playwright:1.52.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// CRITICAL FIX: Enable parameter name preservation for Spring @PathVariable
tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}

tasks.named('test') {
    useJUnitPlatform()
}
